# automated_job_search_recommendations

./: .gitignore  Dockerfile.airflow  README.md  airflow_dag.py  app.py  jobs_pipeline.py  main.py  pyproject.toml  requirements.txt  run_app.sh  test_gpt_oss_120b.py
.github/workflows/: job_scan.yml
data/: job_results.json  seen_jobs.json
links/: links.txt
templates/: cover_letter.txt  resume.tex
tests/: test_golden_hand_utils.py  test_jobs_pipeline.py
