[project]
name = "vibe-code-project-roast-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "openai>=1.60.0",
    "pydantic>=2.8.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.0",
]
